--- a/recipe-page-main/.gitignore
+++ b/recipe-page-main/.gitignore
@@ -14,3 +14,14 @@
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
 .prettierignore
+
+# SCSS/SASS
+.sass-cache/
+*.sass-cache
+*.css.map
+*.sass.map
+*.scss.map
+.sass-cache*
+
+#Ignore styles guide
+style-guide*
