--- a/meet-landing-page/package.json
+++ b/meet-landing-page/package.json
@@ -1,19 +1,28 @@
 {
   "name": "meet-landing-page",
   "version": "1.0.0",
+  "description": "Meet landing page with Tailwind CSS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tailwindcss -i ./css/tailwind.css -o ./css/style.css",
-    "watch": "tailwindcss -i ./css/tailwind.css -o ./css/style.css --watch"
+    "dev": "npm-run-all -p watch:*",
+    "watch:css": "tailwindcss -i ./src/styles/main.css -o ./dist/css/style.css --watch",
+    "watch:html": "posthtml -w ./src/layouts/default.html -o ./dist/index.html",
+    "build": "npm-run-all build:*",
+    "build:css": "tailwindcss -i ./src/styles/main.css -o ./dist/css/style.css --minify",
+    "build:html": "posthtml ./src/layouts/default.html -o ./dist/index.html",
+    "preview": "serve dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.2",
-    "tailwindcss": "^4.0.7"
+    "autoprefixer": "^10.4.17",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.35",
+    "posthtml": "^0.16.6",
+    "posthtml-cli": "^0.10.0",
+    "posthtml-include": "^1.7.4",
+    "serve": "^14.2.1",
+    "tailwindcss": "^3.4.1"
   }
 }
