--- a/article-preview-component/package.json
+++ b/article-preview-component/package.json
@@ -9,5 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "sass": "^1.85.1"
+  }
 }
