--- a/tech-book-club-landing-page/package.json
+++ b/tech-book-club-landing-page/package.json
@@ -10,5 +10,11 @@
   },
   "dependencies": {
     "astro": "^5.5.5"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.17",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.17"
   }
 }
