--- a/tech-book-club-landing-page/package.json
+++ b/tech-book-club-landing-page/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.17",
     "astro": "^5.5.5"
   },
   "devDependencies": {
