--- a/tech-book-club-landing-page/package.json
+++ b/tech-book-club-landing-page/package.json
@@ -1,21 +1,14 @@
 {
-  "name": "tech-book-clud-landing-page",
+  "name": "tech-book-club-landing-page",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev --host",
+    "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.17",
     "astro": "^5.5.5"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.17",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.17"
   }
 }
