--- a/tech-book-club-landing-page/package.json
+++ b/tech-book-club-landing-page/package.json
@@ -3,12 +3,14 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.5.5"
+    "@tailwindcss/vite": "^4.0.17",
+    "astro": "^5.5.5",
+    "tailwindcss": "^4.0.17"
   }
 }
