chore: add package.json and environment type definitions
- Created package.json with dependencies and devDependencies for the project.
- Added environment type definitions in environment.d.ts to support Astro client and define ImportMetaEnv interface.

--- a/tech-book-club-landing-page/tsconfig.json
+++ b/tech-book-club-landing-page/tsconfig.json
@@ -1,5 +1,21 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+    "types": [
+      "astro/client",
+      "debug",
+      "estree",
+      "hast",
+      "mdast",
+      "ms",
+      "nlcst",
+      "unist"
+    ]
+  },
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.astro"],
   "exclude": ["dist"]
 }
