--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
     "astro": "^5.5.5"
   },
   "devDependencies": {
+    "@astrojs/tailwind": "^5.1.5",
     "@types/debug": "^4.1.12",
     "@types/estree": "^1.0.7",
     "@types/hast": "^3.0.4",
     "@types/mdast": "^4.0.4",
     "@types/ms": "^2.1.0",
     "@types/nlcst": "^2.0.3",
-    "@types/unist": "^3.0.3"
+    "@types/unist": "^3.0.3",
+    "tailwindcss": "^3.4.17"
   }
 }
